Fix OpenAPI schema: fix token's header name, make path to obtain token accept JSON only
