# openapi-schema.yml
@@ -1302,16 +1302,6 @@
         "parameters": [],
         "requestBody": {
           "content": {
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/AuthToken"
-              }
-            },
-            "multipart/form-data": {
-              "schema": {
-                "$ref": "#/components/schemas/AuthToken"
-              }
-            },
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/AuthToken"
@@ -1534,7 +1524,7 @@
       "Authorization": {
         "type": "apiKey",
         "in": "header",
-        "name": "Authentication"
+        "name": "Authorization"
       }
     }
   },
